# timescaledb-insert-benchmarks

./: .dockerignore  .env.stub  .gitignore  LICENSE  README.md  copy_data.py  docker-compose.yml  insert_data.py  load_using_tools.py  locations_create_table.py  multi_insert_data.py  parse_tpc_logs.py  plot_benchmarks_summary.py  plot_conversion_time.py  plot_copy_at_scale_benchmark.py  plot_insert_benchmarks.py  plot_parallel_copy_benchmarks.py  plot_tool_benchmarks.py  pyproject.toml  read_cities.py  run_benchmarks.bash  run_copy_benchmarks.bash  run_multi_insert_benchmarks.bash  run_parallel_copy_benchmarks.bash  run_tool_benchmarks.bash  temperature.py  temperature_compress.py  temperature_create.py  temperature_insert_parallel.py  temperature_insert_serial.py  test.py  utils.py  weather_copy_data.py  weather_create.py  weather_create_table.py  weather_insert_data.py  weather_load.py  weather_read.py  weather_write_csv.py  write_csv.py
benchmark_data_loading/: .env.stub  Dockerfile  batch_insert_data.py  copy_data.py  create_table.py  docker-compose.yml  insert_data.py  load_using_tools.py  multi_insert_data.py  parse_tpc_logs.py  plot_benchmarks_summary.py  plot_copy_at_scale_benchmark.py  plot_copy_benchmarks.py  plot_insert_benchmarks.py  plot_parallel_copy_benchmarks.py  plot_parallel_tpc_benchmarks.py  run_batched_insert_benchmarks.bash  run_copy_at_scale_benchmarks.bash  run_copy_benchmarks.bash  run_insert_benchmarks.bash  run_multi_insert_benchmarks.bash  run_parallel_copy_benchmarks.bash  run_parallel_tool_benchmarks.bash  run_tool_benchmarks.bash  timer.py  (+2 more)
(+19 files in other folders)
